--- a/src/main/resources/templates/admindashboard.html
+++ b/src/main/resources/templates/admindashboard.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Navbar Example</title>
+    <title>Admin Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
@@ -40,34 +40,38 @@
 
 <nav class="navbar">
     <!-- Left Corner: Brand / Heading -->
-    <a href="/" class="brand">MyApp</a>
+    <a href="/" class="brand">Quiz App</a>
 
     <!-- Right Corner: Login & Signup -->
     <div class="nav-links">
         <!-- Using Thymeleaf 'th:href' to generate dynamic URLs -->
-        
+        <a th:href="@{/api/test/admindashboard}">Dashboard</a>
         <a th:href="@{/api/test/createTest}">Create Test</a>
         <a th:href="@{/api/test/viewResults}">View Results</a>
         <a th:href="@{/logout}">Logout</a>
     </div>
 </nav>
- 
- <div>
-    <h1>Welcome to Admin Dashboard</h1>
-    <p>Use the navbar above to navigate</p>
-    <div class="container" th:each="l : ${list}">
-    <div class="card"  style="width: 18rem;">
-    <h5 class="card-header" th:text="${l.title}"></h5>
-   
-  <div class="card-body">
-    <h5 class="card-title" th:text="${l.time}"></h5>
-    <p class="card-text" th:text="${l.description}"></p>
-    <a th:href="@{/api/test/question}" class="btn btn-primary">Add Question</a>
-    <a th:href="@{/api/test/viewtest/{id}}" class="btn btn-primary">View Test</a>
-  </div>
-  </div>
-  </div>
-  </div>
+
+<div class="container mt-5">
+    <div th:each="test : ${list}" class="d-flex justify-content-center">
+        <div class="card shadow-sm" style="width: 80%; margin-top: 20px;">
+            <div class="card-body">
+                <h5 class="card-title" th:text="${test.title}">Test Title</h5>
+                <p class="card-text">
+                    Description: <span th:text="${test.description}"></span>
+                </p>
+                <p class="card-text">
+                    Time: <span th:text="${test.time}"></span>
+                </p>
+                <a th:href="@{'/api/test/question/' + ${test.sequenceNumber}}" class="btn btn-primary">
+                  Add Question
+                </a>
+                <a th:href="@{'/api/test/viewtest/' + ${test.sequenceNumber}}" class="btn btn-primary">
+                View Test</a>
+            </div>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
