--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -17,13 +17,18 @@
             <label>Password</label>
             <input type="password" th:field="*{password}" class="form-control" placeholder="Password" required/>
         </div>
-         <div class="mb-3">
-            <label>Name</label>
-            <input type="text" th:field="*{name}" class="form-control" placeholder="Name" required/>
-        </div>
-        
-
-        <button type="submit" class="btn btn-primary">Register</button>
+         
+         
+         
+        <div class="mb-3">
+    <label>Role</label>
+    <select th:field="*{role}" class="form-control">
+        <option th:value="USER">USER</option>
+        <option th:value="ADMIN">ADMIN</option>
+    </select>
+</div>
+             
+    <button type="submit" class="btn btn-primary">Register</button>
 
         <div class="mt-3 text-center">
             Already have an account? <a th:href="@{/login}">Login here</a>
