--- a/src/main/resources/templates/userdashboard.html
+++ b/src/main/resources/templates/userdashboard.html
@@ -2,7 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Navbar Example</title>
+    <title>User Dashboard</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         /* Basic navbar styles */
         body {
@@ -42,14 +46,29 @@
     <div class="nav-links">
         <!-- Using Thymeleaf 'th:href' to generate dynamic URLs -->
         
-        <a th:href="@{/createTest}">Dashboard</a>
+        <a th:href="@{/userdashboard}">Dashboard</a>
         <a th:href="@{/viewResults}">View Results</a>
         <a th:href="@{/logout}">Logout</a>
     </div>
 </nav>
-<div>
-    <h1>Welcome to Admin Dashboard</h1>
-    <p>Use the navbar above to navigate</p>
+<div class="container mt-5">
+    <div th:each="test : ${list}" class="d-flex justify-content-center">
+        <div class="card shadow-sm" style="width: 80%; margin-top: 20px;">
+            <div class="card-body">
+                <h5 class="card-title" th:text="${test.title}">Test Title</h5>
+                <p class="card-text">
+                    Description: <span th:text="${test.description}"></span>
+                </p>
+                <p class="card-text">
+                    Time: <span th:text="${test.time}"></span>
+                </p>
+                <a th:href="@{'/api/test/taketest/' + ${test.sequenceNumber}}" class="btn btn-primary">
+                  Start Test
+                </a>
+                
+            </div>
+        </div>
+    </div>
 </div>
 
 </body>
