--- a/src/main/resources/templates/viewtest.html
+++ b/src/main/resources/templates/viewtest.html
@@ -1,19 +1,36 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>Add Question</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
+<head><title>View Test</title></head>
 <body>
-<form th:action="@{/viewtest/{id}}" th:object="${list}">
-        <p th:text="${list.questionText}"></p>
-        <div th:each="option : ${list.options}">
-            <label>
-                <input type="radio" th:field="*{selectedOption}" th:value="${option}" />
-                <span th:text="${option}"></span>
-            </label>
-            <br />
+  <h2>Test Questions</h2>
+  <div th:each="q : ${questions}" class="mb-4 p-3 border rounded">
+            <h2 th:text="${q.questionText}">Question</h2>
+
+            <div class="form-check">
+                <input class="form-check-input" type="radio" th:name="'question_' + ${q.id}"
+                       th:value="${q.optionA}" id="optA" required>
+                <label class="form-check-label" th:for="'optA'" th:text="${q.optionA}"></label>
+            </div>
+
+            <div class="form-check">
+                <input class="form-check-input" type="radio" th:name="'question_' + ${q.id}"
+                       th:value="${q.optionB}" id="optB">
+                <label class="form-check-label" th:for="'optB'" th:text="${q.optionB}"></label>
+            </div>
+
+            <div class="form-check">
+                <input class="form-check-input" type="radio" th:name="'question_' + ${q.id}"
+                       th:value="${q.optionC}" id="optC">
+                <label class="form-check-label" th:for="'optC'" th:text="${q.optionC}"></label>
+            </div>
+
+            <div class="form-check">
+                <input class="form-check-input" type="radio" th:name="'question_' + ${q.id}"
+                       th:value="${q.optionD}" id="optD">
+                <label class="form-check-label" th:for="'optD'" th:text="${q.optionD}"></label>
+            </div>
         </div>
-    </form>
+
+        
 </body>
 </html>
