--- a/src/main/resources/templates/userdashboard.html
+++ b/src/main/resources/templates/userdashboard.html
@@ -47,7 +47,7 @@
         <!-- Using Thymeleaf 'th:href' to generate dynamic URLs -->
         
         <a th:href="@{/userdashboard}">Dashboard</a>
-        <a th:href="@{/viewResults}">View Results</a>
+        <a th:href="@{/api/test/viewResults}">View Results</a>
         <a th:href="@{/logout}">Logout</a>
     </div>
 </nav>
