--- a/src/main/resources/templates/viewresult.html
+++ b/src/main/resources/templates/viewresult.html
@@ -17,7 +17,7 @@
 </thead>
 <tbody>
 
-<tr th:each="l : ${result}">
+<tr th:each="l : ${results}">
 <td th:text="${l.testName}">TestName</td>
 <td th:text="${l.userName}">UserName</td>
 <td th:text="${l.totalQuestions}">TotalQuestions</td>
